search_engine.html

--- a/search_engine.html
+++ b/search_engine.html
@@ -36,7 +36,7 @@
         };
 
         // Use the GitHub Pages URL for the request
-        xhr.open("GET", "https://<username>.github.io/<repository>/database.htm", true);
+        xhr.open("GET", "https://shoolmister.github.io/search/database.htm", true);
         xhr.send();
     }
 </script>
