index.html.html

--- a/index.html.html
+++ b/index.html.html
@@ -27,7 +27,7 @@
 
         // Load database from Excel on page load
         window.onload = function() {
-            loadDatabase('https://example.com/path/to/database.xlsx');
+            loadDatabase('database.xlsx');
         };
 
         function loadDatabase(filePath) {
